hphp/hack/test/typecheck/refinements/inter_sub_inter.php.like_types.exp
File "inter_sub_inter.php", line 17, characters 20-33:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
